# uno

./: Cargo.toml  LICENSE
src/: .parser.rs.swp  compiler.rs  main.rs  parser.rs
src/asm/linux/: syscall_exit.asm
src/lang/: ast.rs
src/uno_std/: main_wrapper.rs  mod.rs
test_data/: hello_world.uno
