[package]
name = "uno"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
description = "Uno - toy programming language"
repository = "https://github.com/AlexPikalov/uno"

[dependencies]
peg = "0.8.5"
cranelift-frontend = "0.119"
cranelift-object = "0.119"
cranelift-codegen = "0.119"
cranelift-module = "0.119"
